<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/app_login_getbackpassword_background">
        <TextView 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/app_login_login_title"
        android:text="@string/app_forget_getbackpassword_title"
        android:textSize="22sp"
        android:gravity="center"
        android:textColor="@android:color/white"
        />
    
    <Button android:id="@+id/app_getbackpassword_btn"
        android:textColor="@android:color/white"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:background="@drawable/app_login_login_title"
        android:text="@string/app_forget_backbtn"/>
    </RelativeLayout>
    
    <TextView 
        android:id="@+id/app_forget_phone_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/app_forget_phone_text"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="50dp"
        android:textColor="@android:color/darker_gray"/>
    <EditText 
        android:id="@+id/app_forget_phone"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:minWidth="200dp"
        android:layout_below="@+id/app_forget_phone_text"
        android:background="@drawable/app_forget_phone_frame"
        />
    
    <Button 
        android:id="@+id/app_forget_submitbtn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/app_forget_submit_frame"
        android:text="@string/app_forget_submit"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:textColor="#72c145"
        />
    

</RelativeLayout>
